lazy loading in angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <a routerLink="home">goto home</a>
 <router-outlet></router-outlet>
+<br>
+<a routerLink="doctor">goto doctor</a>
+<router-outlet></router-outlet>
